--- a/public/index.html
+++ b/public/index.html
@@ -1797,7 +1797,7 @@
         <div class="toc-section">
             <div style="padding: 0 20px 20px; text-align: center;">
                 <p style="font-size: 16px; color: #4b5563; line-height: 1.6; margin-bottom: 16px;">
-                    IN or OUT is the easiest way to organize pickleball games. Create games in seconds, let players sign up with one click, and manage everything through SMS - no apps or login required.
+                    IN or OUT is the easiest way to organize pickleball games. Create games in seconds, let players sign up with one click, and manage everything through text - no apps or login required.
                 </p>
                 <p style="font-size: 14px; color: #6b7280; font-style: italic;">
                     Click any section below to learn more about that topic
@@ -1814,10 +1814,10 @@
                 </div>
                 <div class="toc-item" data-section="managing-players">
                     <h4>👥 Managing Your Game</h4>
-                    <p>How to promote, move, and remove players with SMS notifications</p>
+                    <p>How to promote, move, and remove players with text notifications</p>
                 </div>
                 <div class="toc-item" data-section="sms-examples">
-                    <h4>📱 SMS Messages</h4>
+                    <h4>📱 Text Messages</h4>
                     <p>See exactly what messages players receive for every action</p>
                 </div>
                 <div class="toc-item" data-section="player-experience">
@@ -1862,7 +1862,7 @@
                             </li>
                             <li>
                                 <div class="step-number">2</div>
-                                <div class="step-text">If spots are available, players <strong>instantly join</strong> and get SMS confirmation with their player number</div>
+                                <div class="step-text">If spots are available, players <strong>instantly join</strong> and get text confirmation with their player number</div>
                             </li>
                             <li>
                                 <div class="step-number">3</div>
@@ -1870,7 +1870,7 @@
                             </li>
                             <li>
                                 <div class="step-number">4</div>
-                                <div class="step-text">Cancellations <strong>automatically promote</strong> the next person with instant SMS notification</div>
+                                <div class="step-text">Cancellations <strong>automatically promote</strong> the next person with instant text notification</div>
                             </li>
                         </ol>
                     </div>
@@ -1899,7 +1899,7 @@
 
                     <div class="mode-step">
                         <h4>📱 Organizer Notifications</h4>
-                        <p>You can choose to receive SMS alerts for:</p>
+                        <p>You can choose to receive text alerts for:</p>
                         <ul style="margin: 12px 0 0 20px; color: #374151; line-height: 1.6;">
                             <li><strong>Someone joins:</strong> "Mike Chen just joined your game. 1 spot remaining."</li>
                             <li><strong>Game becomes full:</strong> "Your game is now FULL! All 4 spots taken."</li>
@@ -2033,7 +2033,7 @@
                             </li>
                             <li>
                                 <div class="step-number">2</div>
-                                <div class="step-text"><strong>Your Info:</strong> Name and phone number for organizer SMS notifications</div>
+                                <div class="step-text"><strong>Your Info:</strong> Name and phone number for organizer text notifications</div>
                             </li>
                             <li>
                                 <div class="step-number">3</div>
@@ -2053,7 +2053,7 @@
                     <div class="creation-step">
                         <h4>📱 What You Get After Creating</h4>
                         <div class="sms-examples">
-                            <h4>Your Confirmation SMS:</h4>
+                            <h4>Your Confirmation Texts:</h4>
                             <div class="sms-label">You receive:</div>
                             <div class="sms-example">
                                 Your pickleball game at Oak Park Courts on Sat, Jan 25 at 2:00 PM has been created! Reply "1" for management link or "2" for game details.
@@ -2199,7 +2199,7 @@
                 
                 <div class="highlight-box">
                     <h4>🔗 Quick Access Reminders:</h4>
-                    <p><strong>Reply "1"</strong> to any SMS from your game to get your management link<br>
+                    <p><strong>Reply "1"</strong> to any text from your game to get your management link<br>
                     Check <strong>"My Games"</strong> if you created it on this device</p>
                 </div>
             </div>
@@ -2267,11 +2267,11 @@
                         <ol class="steps-list" style="border-left-color: #475569;">
                             <li>
                                 <div class="step-number" style="background: #475569;">1</div>
-                                <div class="step-text"><strong>Text +1 (970) 610-1003</strong> with "1" OR reply "1" to any SMS you received about your game</div>
+                                <div class="step-text"><strong>Text +1 (970) 610-1003</strong> with "1" OR reply "1" to any text you received about your game</div>
                             </li>
                             <li>
                                 <div class="step-number" style="background: #475569;">2</div>
-                                <div class="step-text"><strong>Get instant link:</strong> You'll immediately receive your management URL via SMS</div>
+                                <div class="step-text"><strong>Get instant link:</strong> You'll immediately receive your management URL via text message</div>
                             </li>
                         </ol>
                         
@@ -2307,7 +2307,7 @@
                         <h4>💡 Access Tips</h4>
                         <ul style="margin: 12px 0 0 20px; color: #374151; line-height: 1.6;">
                             <li><strong>Use same device:</strong> "My Games" works best on the device where you created the game</li>
-                            <li><strong>Multiple devices:</strong> Use the SMS method to get the link on different devices</li>
+                            <li><strong>Multiple devices:</strong> Use the text method to get the link on different devices</li>
                         </ul>
                     </div>
                 </div>
@@ -2572,7 +2572,7 @@
             </div>
 
             <div class="subsection">
-                <p>See exactly what SMS messages players and organizers receive in each scenario. Each mode has its own flow, plus universal messages that work for both.</p>
+                <p>See exactly what text messages players and organizers receive in each scenario. Each mode has its own flow, plus universal messages that work for both.</p>
             </div>
 
             <!-- First-Come First-Served Flow -->
@@ -2780,7 +2780,7 @@
                             </li>
                             <li>
                                 <div class="step-number">5</div>
-                                <div class="step-text"><strong>Instant result:</strong> Confirmed spot or waitlist position with SMS confirmation</div>
+                                <div class="step-text"><strong>Instant result:</strong> Confirmed spot or waitlist position with text confirmation</div>
                             </li>
                         </ol>
                     </div>
@@ -2901,7 +2901,7 @@
                             </li>
                             <li>
                                 <div class="step-number">5</div>
-                                <div class="step-text"><strong>Wait for selection:</strong> SMS confirmation that application was received</div>
+                                <div class="step-text"><strong>Wait for selection:</strong> Text confirmation that application was received</div>
                             </li>
                         </ol>
                     </div>
@@ -2986,8 +2986,8 @@
 
                 <div class="player-steps">
                     <div class="player-step">
-                        <h4>💬 Interactive SMS Commands</h4>
-                        <p>After joining, players can interact with your game via SMS replies:</p>
+                        <h4>💬 Interactive Text Commands</h4>
+                        <p>After joining, players can interact with your game via text replies:</p>
                         <ol class="steps-list">
                             <li>
                                 <div class="step-number">2</div>
@@ -2999,7 +2999,7 @@
                             </li>
                             <li>
                                 <div class="step-number">📱</div>
-                                <div class="step-text"><strong>Reply "STOP":</strong> Opt out of all SMS notifications</div>
+                                <div class="step-text"><strong>Reply "STOP":</strong> Opt out of all text notifications</div>
                             </li>
                             <li>
                                 <div class="step-number">❓</div>
@@ -3141,7 +3141,7 @@
                                 </li>
                                 <li>
                                     <div class="step-number">2</div>
-                                    <div class="step-text"><strong>Text "1":</strong> Reply "1" to any SMS you received about your game - you'll get the management link instantly</div>
+                                    <div class="step-text"><strong>Text "1":</strong> Reply "1" to any text you received about your game - you'll get the management link instantly</div>
                                 </li>
                                 <li>
                                     <div class="step-number">3</div>
@@ -3154,7 +3154,7 @@
                     <div class="faq-step">
                         <h4 class="faq-question">🔄 What's the difference between "Promote" and "Remove"?</h4>
                         <div class="faq-answer">
-                            <strong>Promote:</strong> Moves a player from waitlist to confirmed spots. They get an SMS saying they're now confirmed.<br><br>
+                            <strong>Promote:</strong> Moves a player from waitlist to confirmed spots. They get an text saying they're now confirmed.<br><br>
                             <strong>Remove:</strong> Completely deletes a player from the game. They get notified they've been removed and won't receive any more notifications about this game.<br><br>
                             <strong>To Waitlist:</strong> Moves a confirmed player back to the waitlist (useful if you need to make room for someone else).
                         </div>
@@ -3182,7 +3182,7 @@
                                 <li><strong>Use quick messages</strong> like game reminders or location details</li>
                                 <li><strong>Send updates</strong> about weather, court changes, or equipment needs</li>
                             </ul>
-                            All messages go out as SMS and include your game details for context.
+                            All messages go out as text and include your game details for context.
                         </div>
                     </div>
 
@@ -3191,9 +3191,9 @@
                         <div class="faq-answer">
                             <strong>If you remove a confirmed player:</strong>
                             <ol>
-                                <li>They get an SMS saying they've been removed from the game</li>
+                                <li>They get an text saying they've been removed from the game</li>
                                 <li>If there's a waitlist, the first person automatically gets promoted</li>
-                                <li>The promoted person gets an SMS saying they're now confirmed</li>
+                                <li>The promoted person gets an text saying they're now confirmed</li>
                             </ol>
                             <strong>If you remove a waitlisted player:</strong> They just get notified of removal and everyone else moves up one position.
                         </div>
@@ -3202,7 +3202,7 @@
                     <div class="faq-step">
                         <h4 class="faq-question">🚫 How do I cancel my entire game?</h4>
                         <div class="faq-answer">
-                            In your management interface, go to "Game Actions" tab and click "Cancel This Game". You can include a reason (like "Weather conditions" or "Court unavailable"). <strong>All players will automatically receive an SMS notification</strong> about the cancellation with your reason.
+                            In your management interface, go to "Game Actions" tab and click "Cancel This Game". You can include a reason (like "Weather conditions" or "Court unavailable"). <strong>All players will automatically receive a text notification</strong> about the cancellation with your reason.
                         </div>
                     </div>
                 </div>
@@ -3220,7 +3220,7 @@
 
                 <div class="faq-steps">
                     <div class="faq-step">
-                        <h4 class="faq-question">📱 Players aren't getting SMS messages - what's wrong?</h4>
+                        <h4 class="faq-question">📱 Players aren't getting text messages - what's wrong?</h4>
                         <div class="faq-answer">
                             <strong>Check these common issues:</strong>
                             <ul>
@@ -3229,7 +3229,7 @@
                                 <li><strong>Carrier blocking:</strong> Some carriers block automated messages - ask players to check spam</li>
                                 <li><strong>STOP commands:</strong> If a player previously replied "STOP", they won't get messages</li>
                             </ul>
-                            <strong>Solution:</strong> Have players text "START" to re-enable SMS if they previously opted out.
+                            <strong>Solution:</strong> Have players text "START" to re-enable text if they previously opted out.
                         </div>
                     </div>
 
@@ -3275,11 +3275,11 @@
                         <div class="faq-answer">
                             <strong>Tell them to:</strong>
                             <ol>
-                                <li><strong>Reply "9"</strong> to any SMS they received about the game</li>
+                                <li><strong>Reply "9"</strong> to any text they received about the game</li>
                                 <li><strong>Or click "OUT"</strong> if they go back to the game link</li>
                                 <li><strong>Or ask you to remove them</strong> - you can do it from your management interface</li>
                             </ol>
-                            They'll get a confirmation SMS that they've been removed from the game.
+                            They'll get a confirmation text that they've been removed from the game.
                         </div>
                     </div>
 
